tests/sumo/output/e3/errors/entryexit_empty/errors.sumo
Warning: e3Detector with id = 'empty1' will not be created because is empty (no detEntry or detExit was defined)
Warning: e3Detector with id = 'empty2' will not be created because is empty (no detEntry or detExit was defined)
